fixed css style issue with checkbox being covered by login

--- a/client/main.css
+++ b/client/main.css
@@ -32,7 +32,7 @@ header {
 }
  
 #login-buttons {
-  display: block;
+  display: inline-block;
 }
  
 h1 {
